<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/recipe_card_height"
        android:layout_margin="@dimen/recipe_card_margin"
        android:layout_marginEnd="@dimen/recipe_card_horizontal_and_top_margin"
        android:layout_marginStart="@dimen/recipe_card_horizontal_and_top_margin"
        android:layout_marginTop="@dimen/recipe_card_horizontal_and_top_margin"
        android:elevation="@dimen/recipe_card_elevation"
        app:cardCornerRadius="@dimen/recipe_card_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/front_card_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <ImageView
                android:id="@+id/card_background_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/recipe_card_image_height"
                android:alpha="0.8"
                android:background="@drawable/bakings"
                android:contentDescription="@string/card_background_image_description" />

            <TextView
                android:id="@+id/error_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_image_found"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="bold|italic"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/card_background_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/bookmark_iv"
                android:layout_width="@dimen/bookmark_width"
                android:layout_height="@dimen/bookmark_unmarked_height"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="fitXY"
                android:contentDescription="@string/bookmark_image_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bookmark" />

            <TextView
                android:id="@+id/card_title_tv"
                android:layout_width="@dimen/responsive_size"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/recipe_card_title_bottom_margin"
                android:layout_marginEnd="@dimen/recipe_card_title_horizontal_margin"
                android:layout_marginStart="@dimen/recipe_card_title_horizontal_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/card_background_image"
                app:layout_constraintEnd_toEndOf="@+id/card_background_image"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:text="Recipe Title" />

            <TextView
                android:id="@+id/servings_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/recipe_card_label_left_margin"
                android:layout_marginTop="@dimen/recipe_card_label_top_margin"
                android:text="@string/servings_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_background_image" />

            <TextView
                android:id="@+id/steps_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/recipe_card_label_left_margin"
                android:layout_marginTop="@dimen/recipe_card_label_top_margin"
                android:text="@string/steps_label"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/card_background_image" />

            <TextView
                android:id="@+id/servings_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/recipe_card_label_to_info_margin"
                app:layout_constraintStart_toEndOf="@+id/servings_label_tv"
                app:layout_constraintTop_toTopOf="@+id/servings_label_tv"
                tools:text="X" />

            <TextView
                android:id="@+id/steps_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/recipe_card_label_to_info_margin"
                app:layout_constraintStart_toEndOf="@+id/steps_label_tv"
                app:layout_constraintTop_toTopOf="@+id/steps_label_tv"
                tools:text="XX" />

            <Button
                android:id="@+id/ingredients_btn"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/recipe_card_ingredients_btn_margin"
                android:layout_marginStart="@dimen/recipe_card_ingredients_btn_margin"
                android:text="@string/show_ingredients"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/back_card_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible">

            <TextView
                android:id="@+id/back_card_title_tv"
                android:layout_width="@dimen/responsive_size"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/recipe_card_backside_title_margin"
                android:layout_marginStart="@dimen/recipe_card_backside_title_margin"
                android:layout_marginTop="@dimen/recipe_card_backside_title_margin"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Recipe Name" />

            <TextView
                android:id="@+id/back_card_ingredients_tv"
                android:layout_width="@dimen/responsive_size"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/recipe_card_backside_ingredients_horizontal_margin"
                android:layout_marginStart="@dimen/recipe_card_backside_ingredients_horizontal_margin"
                android:layout_marginTop="@dimen/recipe_card_backside_ingredients_top_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/back_card_title_tv"
                tools:text="-> Ingredient 1\n-> Ingredient 2" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>